--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 								<p>Team composition: solo</p>
 							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
 								<center><a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" class="button small scrolly" target="_blank">GDD</a>
-									<a href="Levels" class="button small scrolly" target="_blank">Levels</a>
+									<a href="/documents/Unusual_Adventures_Maps.pdf" class="button small scrolly" target="_blank">Maps</a>
 								</center>																																																
 																																															
 							</article>
