--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 								<p>I've created the whole map of a fantasy RPG game, including quests and the ideal paths that the players may take. The level design is entirely explained in the Unusual Adventure's GDD.
 								</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game & Level Design</font></b></p>
-								<p>Team composition: solo</p>
+								<p>Solo project</p>
 							<!--	<a href="_____not yet_______" class="button small scrolly" target="_blank">Watch</a>	-->
 								<center><a href="https://docs.google.com/document/d/1HcH7RdhQNd42AN-bNwyeGFaB2slfVrz9PpxKtLvfqvQ/edit#" class="button small scrolly" target="_blank">GDD</a>
 									<a href="/documents/Unusual_Adventures_Maps.pdf" class="button small scrolly" target="_blank">Maps</a>
