--- a/index.html
+++ b/index.html
@@ -471,12 +471,15 @@
 										<h3>Softwares, Tools and More</h3>
 										<ul>
 											<li><b>Community management:</b> Discord, Kickstarter, Reddit and most popular social networks</li>
-											<li><b>Game engines:</b> Unity and Unreal Engine</li>
-											<li><b>Programming/markup language:</b> C# (intermediate), HTML and CSS/JavaScript</li>
-											<li><b>Project management:</b> Trello, XMind and Scrum</li>
-											<li><b>Source control:</b> Git, Fork and SourceTree</li>
-											<li><b>Video editing:</b> Final Cut Pro and Adobe Première</li>
+											<li><b>Game engines:</b> Unity, Unreal Engine and RPG Maker</li>
+											<li><b>Graphics:</b> Adobe Photoshop, Illustrator, Dragon Bones</li>
+											<li><b>Programming/markup languages:</b> C# (intermediate), HTML and CSS/JavaScript</li>
+											<li><b>Project management:</b> Trello, XMind and Agiles methods (Scrum)</li>
+											<li><b>Source control:</b> GitHub, Fork and SourceTree</li>
+											<li><b>VFX:</b> Pixel FX Designer and Adobe Photoshop</li>
+											<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
 											<li><b>Web:</b> Github pages and Wordpress</li>
+											<li><b>3D Modeling:</b> 3Ds Max, ZBrush and Maya</li>
 
 
 										  </ul> 
