--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 											<li><b>Game engines:</b> Unity, Unreal Engine and RPG Maker</li>
 											<li><b>Graphics:</b> Adobe Photoshop, Illustrator, Dragon Bones</li>
 											<li><b>Programming/markup languages:</b> C# (intermediate), HTML and CSS/JavaScript</li>
-											<li><b>Project management:</b> Trello, XMind and Agiles methods (Scrum)</li>
+											<li><b>Project management:</b> Trello, Jira and XMind</li>
 											<li><b>Source control:</b> GitHub, Fork and SourceTree</li>
 											<li><b>VFX:</b> Pixel FX Designer and Adobe Photoshop</li>
 											<li><b>Video editing:</b> Adobe Première and Final Cut Pro</li>
