--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 									totally destroyed. He has to gather as many "gift boxes" as possible in order to repair his spacecraft, so he can go back home!</p>
 								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>
 								<p>Team composition: 4 people</p>
-								<!--<a href=" " class="button small scrolly" target="_blank">Watch</a>-->																						
+								<a href="https://youtu.be/puORxhJRV1M" class="button small scrolly" target="_blank">Watch</a>																						
 								<a href="https://nielisson.itch.io/fell-off-the-moon" class="button small scrolly" target="_blank">Play</a>
 								
 							</article>
