--- a/index.html
+++ b/index.html
@@ -226,6 +226,19 @@
 
 							<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
+									<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/wingsuit.png" alt="" /></a>
+									<h3><a href="https://youtu.be/dOkUWqhKDHM?t=46" target="_blank">Wingsuit Kings</a></h3> 
+									<p style="font-size: small;"><i>Freelance work 2019</i></p>
+									<p>I've created most of the screens for Wingsuit Kings, including the logo. It's important to highlight that they have tweaked a few elements after my work was done.</p>
+									<p>Roles: <b><font color=#1a4f63>UI Art</font></p>
+									<p>Team composition: 4 people</p>	
+									<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://play.google.com/store/apps/details?id=com.Unsalted.WingsuitFree&hl=en_US&gl=US" class="button small scrolly" target="_blank">Screens</a>
+								</article>
+							</div>
+
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
 									<a href="https://magiccoding.itch.io/rabbots" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/rabbots.png" alt="" /></a>
 									<h3><a href="https://magiccoding.itch.io/rabbots" target="_blank">Rabbots</a></h3> 
 									<p style="font-size: small;"><i>Personal project - 03/2020</i></p>
@@ -280,18 +293,7 @@
 								</article>
 							</div>
 
-							<div class="col-4 col-6-medium col-12-small">
-								<article class="box style2">
-									<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="image featured" target="_blank"><img src="image here" alt="" /></a>
-									<h3><a href="https://youtu.be/dOkUWqhKDHM?t=46" target="_blank">Pendulum</a></h3> 
-									<p style="font-size: small;"><i>Extra Credits Holiday 2018</i></p>
-									<p>Pendulum is a steampunk-inspired 2D platformer. Our hero is striving to survive in this mysterious and hostile place that is full of traps, puzzles and enemies.</p>
-									<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game Design</font></b></p>
-									<p>Team composition: 3 people</p>	
-									<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="button small scrolly" target="_blank">Watch</a>							
-									<a href="https://play.google.com/store/apps/details?id=com.Unsalted.WingsuitFree&hl=en_US&gl=US" class="button small scrolly" target="_blank">Play</a>
-								</article>
-							</div>
+	
 
 					</div>
 					<footer>
