--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 									<h3><a href="https://youtu.be/dOkUWqhKDHM?t=46" target="_blank">Wingsuit Kings</a></h3> 
 									<p style="font-size: small;"><i>Freelance work 2019</i></p>
 									<p>I've created most of the screens for Wingsuit Kings, including the logo. It's important to highlight that they have tweaked a few elements after my work was done.</p>
-									<p>Roles: <b><font color=#1a4f63>UI Art</font></p>
+									<p>Roles: <b><font color=#1a4f63>UI Art</font></b></p>
 									<p>Team composition: 4 people</p>	
 									<a href="https://youtu.be/dOkUWqhKDHM?t=46" class="button small scrolly" target="_blank">Watch</a>							
 									<a href="https://play.google.com/store/apps/details?id=com.Unsalted.WingsuitFree&hl=en_US&gl=US" class="button small scrolly" target="_blank">Screens</a>
