--- a/index.html
+++ b/index.html
@@ -146,6 +146,21 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="link video" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
+								<h3><a href="link video" target="_blank">Sanctuary by the Sea</a></h3>
+								<p style="font-size: small;"><i>Personal project - 01/2021</i></p>
+								<p>Sea turtles are amazing creatures. Unfortunately, due to all the garbage being thrown into the ocean, many are being hurt or even 
+									killed by these contaminants. Help the sea turtles on this beach by cleaning them up. In this case, the less trash on their body, 
+									the better off they are.</p>
+								<p>Roles: <b><font color=#1a4f63>Art</font> | <font color=#f06f4f>Game and Level Design</font></b></p>	
+								<p>Team composition: 4 people</p>							
+								<a href="https://nielisson.itch.io/sanctuary-by-the-sea" class="button small scrolly" target="_blank">Play</a>
+								<a href="https://nielisson.itch.io/sanctuary-by-the-sea" class="button small scrolly" target="_blank">Watch</a>
+							</article>
+						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
 								<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
 								<p style="font-size: small;"><i>Student project - 12/2018</i></p>
