--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Games Converse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,10 +16,17 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Hi. This is Directive.</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
-				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<h1>Making a difference in the world while having fun!</h1>
+				<p>Games Converse is a violence-free hosting platform for short <b>mobile</b> games that raise awareness about environmental and animal rights issues through the gameplay.
+				</p>
+				<p>
+					<ul>
+						<li><b>No advertisements</b></li>
+						<li>10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
+						<li>Every 6 months or if the goal is reached, the cause we fight for changes.</li>
+						<li>Bringing hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such.</li>
+					</ul>
+				</p>
 			</div>
 
 		<!-- Main -->
