--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-paper-plane"></span>
+				<center><img src="/gamesConverse/images/logo.png"></center>
 				<h1>Making a difference in the world while having fun!</h1>
 				<p>Games Converse is a violence-free hosting platform for short <b>mobile</b> games that raise awareness about environmental and animal rights issues through the gameplay.
 				</p>
