--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -16,11 +16,11 @@
 		<!-- Header -->
 			<div id="header">
 				<center><img src="/gamesConverse/images/logo.png"></center>
-				<h1>Making a difference in the world while having fun!</h1>
-				<p>Games Converse is a violence-free hosting platform for short <b>mobile</b> games that raise awareness about environmental and animal rights issues through the gameplay.
-				</p>
 				<p>
 					<ul>
+						<li><p>Making a difference in the world while having fun!</p>
+							<p>Games Converse is a violence-free hosting platform for short <b>mobile</b> games that raise awareness about environmental and animal rights issues through the gameplay.
+							</p></li>
 						<li><b>No advertisements</b></li>
 						<li>10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
 						<li>Every 6 months or if the goal is reached, the cause we fight for changes.</li>
