--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -17,8 +17,8 @@
 			<div id="header">
 				<center><img src="/gamesConverse/images/logo.png"></center>
 
-				<h1>Making a difference in the world while having fun!</h1>
-					<p>Games Converse is a violence-free hosting platform for short <b>mobile</b> games <br>that raise awareness 
+				<h1>Make a difference in the world having fun!</h1>
+					<p>Games Converse is a violence-free hosting platform for short <b>mobile games</b> that raise awareness<br>
 								about environmental and animal rights issues through the gameplay.
 					</p>	
 			</div>
