--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -30,15 +30,13 @@
 					<h2>Why Games Converse?</h2>
 
 					<ul>
-						<li><b>No advertisements</b></li>
-						<li>10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
-						<li>Every 6 months or if the goal is reached, the cause we fight for changes.</li>
-						<li>Bringing hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such.</li>
+						<li><img src="/gamesConverse/images/icons/ad-block.png"> <b>No advertisements</b></li>
+						<li><img src="/gamesConverse/images/icons/globe.png"> 10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
+						<li><img src="/gamesConverse/images/icons/time.png"> Every 6 months or if the goal is reached, the cause we fight for changes.</li>
 					</ul>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+					
+					<p><img src="/gamesConverse/images/icons/objective.png"> Our mission is to bring hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such.</p>
+					
 				</header>
 
 				<div class="box alt container">
