--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -30,12 +30,12 @@
 					<h2>Why Games Converse?</h2>
 
 					<ul>
-						<li><img src="/gamesConverse/images/icons/ad-block.png"> <b>No advertisements</b></li>
-						<li><img src="/gamesConverse/images/icons/globe.png"> 10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
-						<li><img src="/gamesConverse/images/icons/time.png"> Every 6 months or if the goal is reached, the cause we fight for changes.</li>
+						<li><img src="/gamesConverse/images/icons/ad-block.png" width="32px" height="32px"> <b>No advertisements</b></li>
+						<li><img src="/gamesConverse/images/icons/globe.png" width="32px" height="32px"> 10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
+						<li><img src="/gamesConverse/images/icons/time.png" width="32px" height="32px"> Every 6 months or if the goal is reached, the cause we fight for changes.</li>
 					</ul>
 					
-					<p><img src="/gamesConverse/images/icons/objective.png"> Our mission is to bring hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such.</p>
+					<p>Our mission is to bring hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such.</p>
 					
 				</header>
 
