--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -29,7 +29,7 @@
 				<header class="major container medium">
 					<h2>Why Games Converse?</h2>
 
-					<ul style="align-self: left;">
+					<ul class="feature left">
 						<li><img src="/gamesConverse/images/icons/ad-block.png" width="32px" height="32px"> <b>No advertisements</b></li>
 						<li><img src="/gamesConverse/images/icons/globe.png" width="32px" height="32px"> 10% of the profit will be converted into donations to a NGO and/or an association involved in the current cause.</li>
 						<li><img src="/gamesConverse/images/icons/time.png" width="32px" height="32px"> Every 6 months or if the goal is reached, the cause we fight for changes.</li>
