--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -225,25 +225,28 @@
 					</header>
 
 					<p>Let us know what you think about our games and our platform.</p>
+					
+					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 
-					<form method="post" action="#">
-						<div class="row">
-							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" />
-							</div>
-							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-							<div class="col-12">
-								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
+						<label>
+							<p align="left"> <font color="white">Your name </font>
+							<input type="text" name="name" placeholder="Name"> </p>
+						</label>
+	
+						<label>
+							<p align="left"> <font color="white">Your email: </font>
+						  <input type="text" name="_replyto" placeholder="Email"></p>
+						</label>
+	
+						<label>
+							<p align="left"> <font color="white">Your message: </font>
+						  <textarea name="message" placeholder="Write your message here"></textarea></p>
+						</label>
+						<label>
+						<br>
+					  
+						<button type="submit">Send</button>
+					  </form>
 
 					<ul class="icons">
 						<li><a href="https://twitter.com/games_converse" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
