--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -225,28 +225,16 @@
 					</header>
 
 					<p>Let us know what you think about our games and our platform.</p>
-					
-					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 
-						<label>
-							<p align="left"> <font color="white">Your name </font>
-							<input type="text" name="name" placeholder="Name"> </p>
-						</label>
-	
-						<label>
-							<p align="left"> <font color="white">Your email: </font>
-						  <input type="text" name="_replyto" placeholder="Email"></p>
-						</label>
-	
-						<label>
-							<p align="left"> <font color="white">Your message: </font>
-						  <textarea name="message" placeholder="Write your message here"></textarea></p>
-						</label>
-						<label>
-						<br>
-					  
-						<button type="submit">Send</button>
-					  </form>
+						<form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
+							<input type="text" name="name" required>
+							<input type="email" name="email" required>
+							<textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+							<button type="submit">Send</button>
+
+							<input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
+							<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+						</form> 
 
 					<ul class="icons">
 						<li><a href="https://twitter.com/games_converse" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
