--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -233,7 +233,7 @@
 							<button type="submit">Send</button>
 
 							<input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
-							<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+						<!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
 						</form> 
 
 					<ul class="icons">
