--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -227,8 +227,8 @@
 					<p>Let us know what you think about our games and our platform.</p>
 
 						<form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
-							<input type="text" name="name" required>
-							<input type="email" name="email" required>
+							<input type="text" name="name" required placeholder="Name">
+							<input type="email" name="email" required placeholder="Email">
 							<textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
 							<button type="submit">Send</button>
 
