--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -227,10 +227,13 @@
 					<p>Let us know what you think about our games and our platform.</p>
 
 						<form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
-							<input type="text" name="name" required placeholder="Name">
-							<input type="email" name="email" required placeholder="Email">
-							<textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
-							<button type="submit">Send</button>
+							<label><input type="text" name="name" required placeholder="Name">*</label>
+
+							<label><input type="email" name="email" required placeholder="Email"></label>
+
+							<label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
+
+							<label><button type="submit">Send</button></label>
 
 							<input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
 						<!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
