--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -227,7 +227,7 @@
 					<p>Let us know what you think about our games and our platform.</p>
 
 						<form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
-							<label><input type="text" name="name" required placeholder="Name">*</label>
+							<label><input type="text" name="name" required placeholder="Name"></label>
 
 							<label><input type="email" name="email" required placeholder="Email"></label>
 
