--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -233,7 +233,7 @@
 
 							<label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
 
-							<label><button type="submit" style="height:100px; width:300px">Send</button></label>
+							<label><button type="submit" style="height:100px; width:300px; font-size: x-large;">Send</button></label>
 
 							<input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
 						<!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
