--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -239,7 +239,7 @@
 						<!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
 						</form> 
 
-					<ul class="icons">
+					<ul class="icons" style="align-content: flex-end;">
 						<li><a href="https://twitter.com/games_converse" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/gamesconverse" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/gamesconverse/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
