--- a/gamesConverse/report-a-bug.html
+++ b/gamesConverse/report-a-bug.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+		<center><img src="/gamesConverse/images/logo.png"></center>
 			<div id="footer">
 				<div class="container medium">
 
