--- a/gamesConverse/report-a-bug.html
+++ b/gamesConverse/report-a-bug.html
@@ -11,13 +11,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="is-preload">
-		<center><img src="/gamesConverse/images/logo.png"></center>
+	<body class="is-preload" style="background-color: #ffb83d;">
 
+		<div id="header">
+		<center><img src="/gamesConverse/images/logo.png"></center>
+		</div>
 
 			<script type="text/javascript" src="https://form.jotform.com/jsform/210696170181352"></script>
-
- 
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
