--- a/gamesConverse/report-a-bug.html
+++ b/gamesConverse/report-a-bug.html
@@ -13,7 +13,7 @@
 	</head>
 	<body class="is-preload" style="background-color: #ffb83d;">
 
-		<div id="header">
+		<div id="formbg">
 		<center><img src="/gamesConverse/images/logo.png"></center>
 		<script type="text/javascript" src="https://form.jotform.com/jsform/210696170181352"></script>
 		</div>
