--- a/gamesConverse/report-a-bug.html
+++ b/gamesConverse/report-a-bug.html
@@ -14,7 +14,7 @@
 	<body class="formbg" style="background-color: #ffb83d;">
 
 		<div id="formbg">
-		<center><img src="/gamesConverse/images/logo.png"></center>
+		<center><a href="https://nielisson.com/gamesConverse/index.html"><img src="/gamesConverse/images/logo.png"></a></center>
 		<script type="text/javascript" src="https://form.jotform.com/jsform/210696170181352"></script>
 		</div>
 
