--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -13,6 +13,15 @@
 	</head>
 	<body class="is-preload">
 
+<nav>
+<ul class="menu">
+	<li><a href="#!">Home</a></li>
+	<li><a href="#!">About</a></li>
+	<li><a href="#!">Contact</a></li>
+	<li><a href="#!">Faq</a></li>
+</ul>
+</nav>
+
 		<!-- Header -->
 			<div id="header">
 				<center><img src="/gamesConverse/images/logo.png"></center>
