--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -5,15 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<nav>
-		<ul class="menu">
-			<li><a href="#!">Home</a></li>
-			<li><a href="#!">About</a></li>
-			<li><a href="#!">Contact</a></li>
-			<li><a href="#!">Faq</a></li>
-		</ul>
-		</nav>
-		
+
 	<head>
 		<title>Games Converse</title>
 		<meta charset="utf-8" />
@@ -22,7 +14,14 @@
 	</head>
 	<body class="is-preload">
 
-
+		<nav id="nav">
+			<ul class="menu">
+				<li><a href="#!">Home</a></li>
+				<li><a href="#!">About</a></li>
+				<li><a href="#!">Contact</a></li>
+				<li><a href="#!">Faq</a></li>
+			</ul>
+			</nav>
 
 		<!-- Header -->
 			<div id="header">
