--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -14,13 +14,13 @@
 	</head>
 	<body class="is-preload">
 
-		<nav id="nav">
-			<ul class="menu">
-				<li><a href="#!">Home</a></li>
-				<li><a href="#!">About</a></li>
-				<li><a href="#!">Contact</a></li>
-				<li><a href="#!">Faq</a></li>
-			</ul>
+			<nav>
+				<a href="#">Home</a>
+				<a href="#">About</a>
+				<a href="#">Blog</a>
+				<a href="#">Portefolio</a>
+				<a href="#">Contact</a>
+				<div class="animation start-home"></div>
 			</nav>
 
 		<!-- Header -->
