--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="is-preload">
 
-			<nav>
+			<nav id="nav">
 				<a href="#">Home</a>
 				<a href="#">About</a>
 				<a href="#">Blog</a>
@@ -22,6 +22,9 @@
 				<a href="#">Contact</a>
 				<div class="animation start-home"></div>
 			</nav>
+
+			
+
 
 		<!-- Header -->
 			<div id="header">
