--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -14,15 +14,13 @@
 	</head>
 	<body class="is-preload">
 
-			<nav id="nav">
-				<a href="#">Home</a>
-				<a href="#">About</a>
-				<a href="#">Blog</a>
-				<a href="#">Portefolio</a>
-				<a href="#">Contact</a>
-				<div class="animation start-home"></div>
-			</nav>
 
+
+			<a href="#" class="btn">Home</a>
+			<a href="#" class="btn">About</a>
+			<a href="#" class="btn">Services</a>
+			<a href="#" class="btn">Contact</a>
+			
 			
 
 
