--- a/gamesConverse/index.html
+++ b/gamesConverse/index.html
@@ -13,15 +13,13 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
-
-
-
-			<a href="#" class="btn">Home</a>
-			<a href="#" class="btn">About</a>
-			<a href="#" class="btn">Services</a>
-			<a href="#" class="btn">Contact</a>
 			
-			
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li style="float:right"><a class="active" href="#about">About</a></li>
+			  </ul> 
 
 
 		<!-- Header -->
