--- a/gc/index.html
+++ b/gc/index.html
@@ -1122,58 +1122,7 @@
                     <!-- Contact Form -->
 
 		<!-- Footer -->
-        <div id="footer">
-            <div class="container medium">
-
-                <header class="major last">
-                    <h2>Questions, suggestions or comments?</h2>
-                </header>
-
-                <p>Let us know what you think about our games and our platform.</p>
-
-                    <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
-                        <label><input type="text" name="name" required placeholder="Name"></label>
-
-                        <label><input type="email" name="email" required placeholder="Email"></label>
-
-                        <label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
-
-                        <label><button type="submit" style="height:50px; width:200px; font-size: x-large;">Send</button></label>
-
-                        <input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
-                    <!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
-                    </form> 
-
-                <ul class="icons" style="align-content: flex-end;">
-                    <li><a href="https://twitter.com/games_converse" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="https://www.facebook.com/gamesconverse" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                    <li><a href="https://www.instagram.com/gamesconverse/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                </ul>
-
-                <ul class="copyright">
-                    <li>&copy; Games Converse. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                </ul>
-
-            </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                    <form id="contactForm" data-toggle="validator" data-focus="false">
+                    <form id="contactForm" data-toggle="validator" data-focus="false" action="https://formsubmit.co/nielisson_silva@hotmail.com">
                         <div class="form-group">
                             <input type="text" class="form-control-input" id="cname" required>
                             <label class="label-control" for="cname">Name</label>
@@ -1201,6 +1150,12 @@
                         </div>
                     </form>
                     <!-- end of contact form -->
+
+                    <ul class="icons" style="align-content: flex-end;">
+                        <li><a href="https://twitter.com/games_converse" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="https://www.facebook.com/gamesconverse" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                        <li><a href="https://www.instagram.com/gamesconverse/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                    </ul>
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -1278,7 +1233,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a></p>
+                    <p class="p-small">Games Converse. All rights reserved. <a href="https://inovatik.com">Template by Inovatik</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
