--- a/gc/index.html
+++ b/gc/index.html
@@ -1077,42 +1077,24 @@
                             <li><i class="fas fa-phone"></i><a href="tel:003024630820">+81 720 22 128</a></li>
                             <li><i class="fas fa-envelope"></i><a href="mailto:office@aria.com">office@aria.com</a></li>
                         </ul>
-                        <h3>Follow Aria On Social Media</h3>
+                        <h3>Follow Games Converse On Social Media</h3>
 
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/gamesconverse">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://twitter.com/games_converse">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
-                                <span class="hexagon"></span>
-                                <i class="fab fa-pinterest fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.instagram.com/gamesconverse/">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <span class="hexagon"></span>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                            </a>
-                        </span>
-                        <span class="fa-stack">
-                            <a href="#your-link">
-                                <span class="hexagon"></span>
-                                <i class="fab fa-behance fa-stack-1x"></i>
                             </a>
                         </span>
                     </div> <!-- end of text-container -->
@@ -1120,8 +1102,6 @@
                 <div class="col-lg-6">
                     
                     <!-- Contact Form -->
-
-		<!-- Footer -->
                     <form id="contactForm" data-toggle="validator" data-focus="false" action="https://formsubmit.co/nielisson_silva@hotmail.com">
                         <div class="form-group">
                             <input type="text" class="form-control-input" id="cname" required>
@@ -1139,7 +1119,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group checkbox">
-                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I agree with Aria's stated <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a> 
+                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I agree with Games Converse's stated <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a> 
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
@@ -1150,12 +1130,6 @@
                         </div>
                     </form>
                     <!-- end of contact form -->
-
-                    <ul class="icons" style="align-content: flex-end;">
-                        <li><a href="https://twitter.com/games_converse" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                        <li><a href="https://www.facebook.com/gamesconverse" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                        <li><a href="https://www.instagram.com/gamesconverse/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                    </ul>
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
