--- a/gc/index.html
+++ b/gc/index.html
@@ -1040,11 +1040,11 @@
                         <!-- Counter -->
                         <div id="counter">
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="231">1</div>
-                                <div class="counter-info">Happy<br>Users</div>
+                                <div class="counter-value number-count" data-count="589">1</div>
+                                <div class="counter-info">Trees<br>Planted</div>
                             </div>
                             <div class="cell">
-                                <div class="counter-value number-count" data-count="121">1</div>
+                                <div class="counter-value number-count" data-count="589">1</div>
                                 <div class="counter-info">Issues<br>Solved</div>
                             </div>
                             <div class="cell">
