--- a/gc/index.html
+++ b/gc/index.html
@@ -1100,36 +1100,18 @@
                 <div class="col-lg-6">
                     
                     <!-- Contact Form -->
+                    <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
+                        <label><input type="text" name="name" required placeholder="Name"></label>
 
+                        <label><input type="email" name="email" required placeholder="Email"></label>
 
-                    
-                    <form id="contactForm" data-toggle="validator" data-focus="false" action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
-                        <div class="form-group">
-                            <input type="text" class="form-control-input" id="cname" required name="name">
-                            <label class="label-control" for="cname" >Name</label>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control-input" id="cemail" required name="email">
-                            <label class="label-control" for="cemail">Email</label>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control-textarea" id="cmessage" required name="message"></textarea>
-                            <label class="label-control" for="cmessage">Your message</label>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group checkbox">
-                            <input type="checkbox" id="cterms" value="Agreed-to-Terms" required>I agree with Games Converse's stated <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a> 
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="form-control-submit-button">SUBMIT MESSAGE</button>
-                        </div>
-                        <div class="form-message">
-                            <div id="cmsgSubmit" class="h3 text-center hidden"></div>
-                        </div>
-                    </form>
+                        <label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
+
+                        <label><button type="submit" style="height:50px; width:200px; font-size: x-large;">Send</button></label>
+
+                        <input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
+                    <!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
+                    </form>   
                     <!-- end of contact form -->
 
                 </div> <!-- end of col -->
