--- a/gc/index.html
+++ b/gc/index.html
@@ -1107,11 +1107,12 @@
 
                         <label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
 
-                        <label><button type="submit" style="height:50px; width:200px; font-size: x-large;">Send</button></label>
+                        <label><button type="submit" class="form-control-submit-button">Send</button></label>
 
                         <input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
                     <!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
-                    </form>   
+                    </form> 
+              
                     <!-- end of contact form -->
 
                 </div> <!-- end of col -->
