--- a/gc/index.html
+++ b/gc/index.html
@@ -95,13 +95,13 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="#your-link">
+                    <a href="https://www.facebook.com/gamesconverse">
                         <span class="hexagon"></span>
                         <i class="fab fa-facebook-f fa-stack-1x"></i>
                     </a>
                 </span>
                 <span class="fa-stack">
-                    <a href="#your-link">
+                    <a href="https://twitter.com/games_converse">
                         <span class="hexagon"></span>
                         <i class="fab fa-twitter fa-stack-1x"></i>
                     </a>
@@ -918,13 +918,13 @@
                         <p class="job-title">General Manager</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.facebook.com/gamesconverse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://twitter.com/games_converse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-twitter fa-stack-1x"></i>
                                 </a>
@@ -942,13 +942,13 @@
                         <p class="job-title">Business Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.facebook.com/gamesconverse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://twitter.com/games_converse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-twitter fa-stack-1x"></i>
                                 </a>
@@ -966,13 +966,13 @@
                         <p class="job-title">Online Marketer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.facebook.com/gamesconverse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://twitter.com/games_converse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-twitter fa-stack-1x"></i>
                                 </a>
@@ -990,13 +990,13 @@
                         <p class="job-title">Community Manager</p>
                         <span class="social-icons">
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://www.facebook.com/gamesconverse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
                             </span>
                             <span class="fa-stack">
-                                <a href="#your-link">
+                                <a href="https://twitter.com/games_converse">
                                     <span class="hexagon"></span>
                                     <i class="fab fa-twitter fa-stack-1x"></i>
                                 </a>
@@ -1101,14 +1101,22 @@
                     
                     <!-- Contact Form -->
                     <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
-                        <label><input type="text" name="name" required placeholder="Name"></label>
+                        <div class="form-group">
+                            <label><input type="text" name="name" required placeholder="Name"></label>
+                        </div>
 
-                        <label><input type="email" name="email" required placeholder="Email"></label>
+                        <div class="form-group">
+                            <label><input type="email" name="email" required placeholder="Email"></label>
+                        </div>
 
-                        <label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
+                        <div class="form-group">
+                            <label><textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea></label>
+                        </div>
 
-                        <label><button type="submit" class="form-control-submit-button">Send</button></label>
-
+                        <div class="form-group">
+                            <label><button type="submit" class="form-control-submit-button">Send</button></label>
+                        </div>
+                        
                         <input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
                     <!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
                     </form> 
