--- a/gc/index.html
+++ b/gc/index.html
@@ -1102,7 +1102,7 @@
                     <!-- Contact Form -->
                     <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
                         <div class="form-group">
-                            <label><input type="text" name="name" required placeholder="Name"></label>
+                            <label class="label-control" for="cname"><input type="text" name="name" required placeholder="Name">Name</label>
                         </div>
 
                         <div class="form-group">
@@ -1116,7 +1116,7 @@
                         <div class="form-group">
                             <label><button type="submit" class="form-control-submit-button">Send</button></label>
                         </div>
-                        
+
                         <input type="hidden" name="_autoresponse" value="Thank you for your message. We will be replying soon! :)">
                     <!--	<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">-->
                     </form> 
