--- a/gc/index.html
+++ b/gc/index.html
@@ -1102,7 +1102,7 @@
                     <!-- Contact Form -->
                     <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
                      
-                            <label class="label-control" for="cname"><input type="text" name="name" required placeholder="Name">Name</label>
+                            <label class="label-control" for="cname"><input type="text" name="name" required placeholder="Name"></label>
                             <br>
                             <label><input type="email" name="email" required placeholder="Email"></label>
                             <br>
