--- a/gc/index.html
+++ b/gc/index.html
@@ -1100,7 +1100,7 @@
                 <div class="col-lg-6">
                     
                     <!-- Contact Form -->
-                    <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST">
+                    <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST" id="contactForm">
                         <div class="form-group">
                             <label class="label-control" for="cname"><input type="text" name="name" required placeholder="Name"></label>
                         </div>
