--- a/gc/index.html
+++ b/gc/index.html
@@ -987,16 +987,16 @@
                     <!-- Contact Form -->
                     <form action="https://formsubmit.co/nielisson_silva@hotmail.com" method="POST" id="contactForm">
                         <div class="form-group">
-                            <label class="label-control" for="cname"><input type="text" name="name" required placeholder="Name" id="cname" class="form-control-input"></label>
+                            <input type="text" name="name" required placeholder="Name" id="cname" class="form-control-input"><label class="label-control" for="cname">Name</label>
                             <div class="help-block with-errors"></div>
                         </div>
 
                         <div class="form-group">
-                            <label class="label-control" for="cemail"><input type="email" name="email" required placeholder="Email" class="form-control-input" id="cemail"></label>
+                            <input type="email" name="email" required placeholder="Email" class="form-control-input" id="cemail"><label class="label-control" for="cemail">Email</label>
                             <div class="help-block with-errors"></div>  
                         </div>                
                         <div class="form-group">
-                            <label class="label-control" for="cmessage"><textarea placeholder="Your Message" name="message" rows="10" class="form-control-textarea" id="cmessage" required></textarea></label>
+                            <textarea placeholder="Your Message" name="message" rows="10" class="form-control-textarea" id="cmessage" required></textarea><label class="label-control" for="cmessage">Your message</label>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
